--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "cors": "^2.8.4",
-    "express": "^4.16.0"
+    "express": "^4.16.0",
+    "mongoose": "^4.12.0"
   }
 }
